--- a/BugTrackerUI/Pages/NewBug.razor
+++ b/BugTrackerUI/Pages/NewBug.razor
@@ -1,5 +1,12 @@
 ﻿@page "/new-bug"
 
-@code {
+<h3>Add New Bug</h3>
 
+<EditForm Model="AddBug">
+    <InputText @bind-Value="@AddBug.Title" placeholder="Enter Description"></InputText>
+    <InputNumber @bind-Value="@AddBug.Priority" placeholder="Enter Priority"></InputNumber>
+    <button type="submit">Add Bug</button>
+</EditForm> 
+@code {
+    Bug AddBug = new Bug();
 }
