--- a/BugTrackerUI/Components/BugList.razor
+++ b/BugTrackerUI/Components/BugList.razor
@@ -1,15 +1,21 @@
 ﻿<h3>All Bugs</h3>
 <table>
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>Title</th>
+            <th>Description</th>
+            <th>Priority</th>
+        </tr>
+    </thead>
     @foreach (var bug in Bugs)
     {
-        <thead>
-            <tr>
-                <th>@bug.Id</th>
-                <th>@bug.Title</th>
-                <th>@bug.Description</th>
-                <th>@bug.Priority</th>
-            </tr>
-        </thead>
+        <tr>
+            <th>@bug.Id</th>
+            <th>@bug.Title</th>
+            <th>@bug.Description</th>
+            <th>@bug.Priority</th>
+        </tr>
     }
 </table>
 
